# visualisateur3D

./: CMakeLists.txt  README.md
projet/: StandardShading.fragmentshader  StandardShading.vertexshader  bouton.cpp  bouton.h  controls.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  objloader.cpp  shader.cpp  texture.cpp  triangle.cpp  triangle.h  vboindexer.cpp  vboindexer.hpp
